@@ -1,7 +1,7 @@
 #!/bin/bash
 
 PATH="/bin:/usr/bin:/sbin:/usr/sbin"
-GK_V='3.4.9_pre4'
+GK_V='3.4.9_pre5'
 
 # Set the default for TMPDIR.  May be modified by genkernel.conf or the
 # --tempdir command line option.
@@ -27,9 +27,8 @@ parse_opt() {
 case "$*" in
 	--config=*)
 		CMD_GK_CONFIG=`parse_opt "$*"`
-		;;
-	esac
-}
+	;;
+esac
 
 source ${CMD_GK_CONFIG:-/etc/genkernel.conf} || small_die "Could not read /etc/genkernel.conf"
 
