@@ -2,6 +2,11 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh,
+  gen_initramfs.sh, genkernel:
+  Fixed device-mapper/man removal for bug #196087, fixed mdadm.conf copying,
+  and fixed syntax error for bug #197582. This is genkernel-3.4.9_pre5.
+
   30 Oct 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   -pkg/suspend-0.5-Makefile.patch, -pkg/busybox-1.1.3+gentoo.tar.bz2,
   -pkg/devfsd-1.3.25-dietlibc.patch,
